# polymarket-mm

./: .gitignore  CMakeLists.txt  test.cpp
include/core/: event_queue.hpp  types.hpp
include/data/: order_book.hpp
include/network/: http_client.hpp  websocket_client.hpp
include/strategy/: adverse_selection.hpp  market_maker.hpp  order_manager.hpp  strategy_engine.hpp
include/utils/: logger.hpp  market_summary_logger.hpp  state_persistence.hpp  trade_logger.hpp  trading_logger.hpp
src/: main.cpp
src/core/: event_queue.cpp
src/data/: order_book.cpp
src/network/: http_client.cpp  websocket_client.cpp
src/strategy/: adverse_selection.cpp  market_maker.cpp  order_manager.cpp  strategy_engine.cpp
src/utils/: logger.cpp  market_summary_logger.cpp  state_persistence.cpp  trade_logger.cpp  trading_logger.cpp
tests/: test_event_queue.cpp  test_market_maker.cpp  test_order_book.cpp  test_order_manager.cpp  test_quote_ttl.cpp  test_state_persistence.cpp  test_strategy_engine.cpp  test_trading_logger.cpp  test_websocket.cpp
